--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "838b4c9d-9f88-4187-aa9c-2d74f93ae020"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
